# serializer version: 1
# name: test_climate_entities[None][climate.living_room-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'low',
        'high',
        'auto',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        'on',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.living_room',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'airpatrol',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 425>,
    'translation_key': None,
    'unique_id': 'test_user_id-test_unit_001',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_entities[None][climate.living_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'low',
        'high',
        'auto',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'living room',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 425>,
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        'on',
        'off',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'climate.living_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_climate_entities[climate_data0][climate.living_room-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'low',
        'high',
        'auto',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        'on',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.living_room',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'airpatrol',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 425>,
    'translation_key': None,
    'unique_id': 'test_user_id-test_unit_001',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_entities[climate_data0][climate.living_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 45.0,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 22.5,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: 'high',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'low',
        'high',
        'auto',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'living room',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 425>,
      <ClimateEntityStateAttribute.SWING_MODE: 'swing_mode'>: 'off',
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        'on',
        'off',
      ]),
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 22.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.living_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
